--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
 PORT=5004
-MONGO_URL=mongodb://127.0.0.1:27017/FSDEMO1
+MONGO_URL=mongodb+srv://nandininarayanasamy1997:uJJXcybiAAyJtLhT@cluster0.38xyw1x.mongodb.net/
 JWT_SECRET=fdkjvnkfjvbksbvks
